--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "KmFhapUN-Igd"
       },
@@ -56,24 +56,12 @@
         "from sklearn.datasets import make_regression\n",
         "from sklearn.ensemble import GradientBoostingRegressor\n",
         "\n",
-        "# Keras specific\n",
-        "import keras\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense\n",
-        "\n",
-        "from sklearn.metrics import r2_score, mean_squared_error, accuracy_score, precision_score, recall_score, confusion_matrix\n",
-        "\n",
-        "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.cluster import KMeans\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "\n",
-        "\n"
+        "from sklearn.metrics import r2_score, mean_squared_error, accuracy_score, precision_score, recall_score, confusion_matrix\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "vs-Qw2dd-Igg"
       },
@@ -3215,17 +3203,6 @@
         ""
       ],
       "metadata": {
-        "id": "Seg7bkdVUbMD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
         "id": "gp49NGc5UbTf"
       },
       "execution_count": null,
@@ -3248,10 +3225,47 @@
         "#!ngrok authtoken 22jg9dgfJ2Vrf9hIs8I8fppLe24_4vre3wAhAg3T7F9ArM2Nr"
       ],
       "metadata": {
-        "id": "MT7XDppsUbdx"
+        "id": "MT7XDppsUbdx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f0a5e1b-d056-4f16-bcbd-0143d7d8a131"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting flask-ngrok\n",
+            "  Downloading flask_ngrok-0.0.25-py3-none-any.whl (3.1 kB)\n",
+            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.7/dist-packages (from flask-ngrok) (1.1.4)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from flask-ngrok) (2.23.0)\n",
+            "Requirement already satisfied: Jinja2<3.0,>=2.10.1 in /usr/local/lib/python3.7/dist-packages (from Flask>=0.8->flask-ngrok) (2.11.3)\n",
+            "Requirement already satisfied: Werkzeug<2.0,>=0.15 in /usr/local/lib/python3.7/dist-packages (from Flask>=0.8->flask-ngrok) (1.0.1)\n",
+            "Requirement already satisfied: itsdangerous<2.0,>=0.24 in /usr/local/lib/python3.7/dist-packages (from Flask>=0.8->flask-ngrok) (1.1.0)\n",
+            "Requirement already satisfied: click<8.0,>=5.1 in /usr/local/lib/python3.7/dist-packages (from Flask>=0.8->flask-ngrok) (7.1.2)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/dist-packages (from Jinja2<3.0,>=2.10.1->Flask>=0.8->flask-ngrok) (2.0.1)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->flask-ngrok) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->flask-ngrok) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->flask-ngrok) (2021.10.8)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->flask-ngrok) (2.10)\n",
+            "Installing collected packages: flask-ngrok\n",
+            "Successfully installed flask-ngrok-0.0.25\n",
+            "Collecting pyngrok==4.1.1\n",
+            "  Downloading pyngrok-4.1.1.tar.gz (18 kB)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from pyngrok==4.1.1) (0.16.0)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from pyngrok==4.1.1) (3.13)\n",
+            "Building wheels for collected packages: pyngrok\n",
+            "  Building wheel for pyngrok (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyngrok: filename=pyngrok-4.1.1-py3-none-any.whl size=15984 sha256=df1a4195edbdb013a429735be4a24547047d6dbe2dab2b8786ae7d26aab087cb\n",
+            "  Stored in directory: /root/.cache/pip/wheels/b1/d9/12/045a042fee3127dc40ba6f5df2798aa2df38c414bf533ca765\n",
+            "Successfully built pyngrok\n",
+            "Installing collected packages: pyngrok\n",
+            "Successfully installed pyngrok-4.1.1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3263,7 +3277,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aDkMvEB2f8Cx",
-        "outputId": "168105cd-b5a1-407e-e65b-d7e5a2ff5ede"
+        "outputId": "7c05ffc0-0129-46a8-da47-187315e38bfa"
       },
       "execution_count": 7,
       "outputs": [
@@ -3287,15 +3301,12 @@
       "metadata": {
         "id": "tUGSgI9MWqN4"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from os import name \n",
-        "from flask_ngrok import run_with_ngrok\n",
-        "from flask import Flask, request, render_template, redirect, url_for\n",
         "\n",
         "app = Flask(__name__, template_folder='/content', static_folder='/content/static')\n",
         "\n",
@@ -3319,9 +3330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-3pnfYa0d6yJ",
-        "outputId": "9b8e1af7-46cb-4c08-812e-57a68c17dc88"
+        "outputId": "288d1cca-18df-4130-caf3-e306f008e418"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3345,7 +3356,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://3144-104-196-208-105.ngrok.io\n",
+            " * Running on http://af6f-34-80-119-158.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         },
@@ -3353,9 +3364,10 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "127.0.0.1 - - [31/Dec/2021 00:23:41] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [31/Dec/2021 00:23:41] \"\u001b[37mGET /static/css/style.css HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [31/Dec/2021 00:23:42] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+            "127.0.0.1 - - [31/Dec/2021 15:09:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [31/Dec/2021 15:09:19] \"\u001b[37mGET /static/css/style.css HTTP/1.1\u001b[0m\" 200 -\n",
+            "127.0.0.1 - - [31/Dec/2021 15:09:19] \"\u001b[33mGET /bike.jpg HTTP/1.1\u001b[0m\" 404 -\n",
+            "127.0.0.1 - - [31/Dec/2021 15:09:20] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
           ]
         },
         {
@@ -3375,13 +3387,21 @@
           "text": [
             " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * Running on http://d1d5-34-80-119-158.ngrok.io\n",
+            " * Traffic stats available on http://127.0.0.1:4040\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "/content/content/index_accueil.html"
       ],
       "metadata": {
         "id": "UkIDwXcZd62i"
