--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -3330,9 +3330,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-3pnfYa0d6yJ",
-        "outputId": "288d1cca-18df-4130-caf3-e306f008e418"
+        "outputId": "f15e0258-c99d-43ee-8e45-fc89d9679e50"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -3356,24 +3356,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://af6f-34-80-119-158.ngrok.io\n",
-            " * Traffic stats available on http://127.0.0.1:4040\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "127.0.0.1 - - [31/Dec/2021 15:09:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [31/Dec/2021 15:09:19] \"\u001b[37mGET /static/css/style.css HTTP/1.1\u001b[0m\" 200 -\n",
-            "127.0.0.1 - - [31/Dec/2021 15:09:19] \"\u001b[33mGET /bike.jpg HTTP/1.1\u001b[0m\" 404 -\n",
-            "127.0.0.1 - - [31/Dec/2021 15:09:20] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            " * Running on http://cba8-34-80-119-158.ngrok.io\n",
+            " * Traffic stats available on http://127.0.0.1:4040\n",
             " * Serving Flask app \"__main__\" (lazy loading)\n",
             " * Environment: production\n",
             "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
@@ -3392,7 +3376,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * Running on http://d1d5-34-80-119-158.ngrok.io\n",
+            " * Running on http://37d4-34-80-119-158.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
           ]
         }
