--- a/Seoul_Bike_Data_Project.ipynb
+++ b/Seoul_Bike_Data_Project.ipynb
@@ -9294,7 +9294,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As we can see, the obtained MSE scores are insanely high and to close to 0 as they should. <br>\n",
+        "As we can see, the obtained MSE scores are insanely high and not close to 0 as they should. <br>\n",
         "It is because our dataset contains very versatile and dispersed (features having an extended scale which can vary rapidly from day to day) plus lots of records (and we need all of them to build a model due to disparate values depending on time related link to the weather...as our dataset displays rows each hour) <br><br>\n",
         "So we decided to base our assessment of the model's performance on the R2 score rather than the MSE score because this evaluation metrics does not suit te pecualarity of our dataset. "
       ],
